# trawler

./: .gitattributes  .gitignore  .gitmodules  CI_FLOW_PIPELINE_AUDIT.md  CLAUDE.md  EXPERIMENTS.md  GRPO_TRAINING_REVIEW.md  LICENSE  README.md  launchers  models  norms_inspector.html  pipeline_manifest.json  pyproject.toml  results_log.csv  server.env.example  test_clean_stage.py
.viz/longitudinal_world/: .gitignore  README.md  package.json  prepare_geo_data.py  vite.config.js
.viz/longitudinal_world/src/: App.jsx  Overlays.jsx
dagspaces/: __init__.py
dagspaces/.rule_tuples/: __init__.py
dagspaces/.rule_tuples/conf/: config.yaml
dagspaces/.rule_tuples/stages/: __init__.py
dagspaces/.uair/: __init__.py  cli.py  orchestrator.py  verification_core.py
dagspaces/.uair/conf/: config.yaml
dagspaces/.uair/runners/: __init__.py  classification_relevance.py  classification_risks_benefits.py  decompose_nbl.py  synthesis.py  verification_nbl.py
dagspaces/.uair/stages/: __init__.py  classify.py  classify_dispatcher.py  decompose_nbl.py  topic_plot.py  verify_nbl.py
dagspaces/cirl_vignettes/: cli.py  orchestrator.py  prompts.py  wandb_logger.py
dagspaces/cirl_vignettes/conf/: config.yaml
dagspaces/cirl_vignettes/runners/: __init__.py  eval_stages.py
dagspaces/cirl_vignettes/stages/: compute_metrics.py  compute_trajectory_metrics.py  judge_helpfulness.py  judge_leakage.py  llm_inference.py  load_dataset.py  parse_responses.py  trajectory_inference.py
dagspaces/cirl_vignettes/toolemu/: __init__.py
dagspaces/common/: __init__.py  config_schema.py  eval_schemas.py  judge_client.py  orchestrator.py  stage_utils.py  vllm_inference.py  wandb_logger.py
dagspaces/common/runners/: __init__.py  base.py
dagspaces/confaide/: cli.py  orchestrator.py  prompts.py  wandb_logger.py
dagspaces/confaide/conf/: config.yaml
dagspaces/confaide/runners/: __init__.py  eval_stages.py
dagspaces/confaide/stages/: compute_metrics.py  llm_inference.py  load_dataset.py  parse_responses.py
dagspaces/contextual_integrity_eval/: cli.py  logging_filters.py  orchestrator.py  prompts.py  wandb_logger.py
dagspaces/eval_all/: __main__.py  cli.py  orchestrator.py  server.py
dagspaces/goldcoin_hipaa/: cli.py  orchestrator.py  prompts.py  wandb_logger.py
dagspaces/grpo_training/: __init__.py  cli.py  orchestrator.py  schemas.py  wandb_logger.py
dagspaces/historical_norms/: __init__.py  ci_schema.py  cli.py  config_schema.py  orchestrator.py  schema.py  wandb_logger.py
dagspaces/privacylens/: __init__.py  cli.py  orchestrator.py  prompts.py  wandb_logger.py
dagspaces/rule_tuples/: cli.py  orchestrator.py
dagspaces/uair/: cli.py  orchestrator.py  schema_builders.py  wandb_logger.py
dagspaces/vlm_geoprivacy_bench/: cli.py  model_prompts.py  orchestrator.py  prompts.py  vlm_inference.py  wandb_logger.py
data/: fiction_novel_summaries.json
docs/: CONFIGURATION_GUIDE.md  CUSTOM_STAGES_GUIDE.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  cluster_synthesis_design.md  keyword_tracking.md  synthesis_dual_input_design.md  synthesis_quickstart.md  synthesis_stage_summary.md
notebooks/: cases_for_workshop.ipynb  eda_norm_extraction.ipynb  eda_reasoning_traces.ipynb  eda_role_abstraction.ipynb  font_utils.py  validate_fiction_chunks.ipynb
notebooks/COLM/: mar6_fiction_flows.ipynb  mar6_fiction_flows.json  mar6_sft_data_gen.ipynb
notebooks/COLM26/: completion_inspector.ipynb  grpo_ablations.ipynb  qwen35_4b_privacylens_investigation.ipynb  single_book_ablation.ipynb  zero_shot_ablation.ipynb  zero_shot_vs_sft.ipynb  zero_shot_vs_sft_vs_grpo.ipynb
notebooks/debugging/: xgrammar_schema.ipynb
notebooks/euai_sgd_prompts/: 2 DeduplicateUses.ipynb  3 GenerateRisksBenefits.ipynb
notebooks/historical_norms/: jan20_reasoning_eda.ipynb  jan25_extraction_eda.ipynb
notebooks/norms/: embed_ci_flows.py  embed_ci_flows_religious.py  ethics_of_our_fathers_ci_flows.csv  feb11_embedding_viz.ipynb  feb11_pandp_vs_1984.ipynb  feb12_religious.ipynb
notebooks/results/: 0_decompose_top_domains.ipynb
notebooks/sanity_checks/: nov6_classify_eu_ai.ipynb
notebooks/use_extraction_package/: 1-UsesGen-generate-uses-from-AIID.ipynb
papers/ig2/: main.bbl  main.tex
papers/norm_extraction/: methods.tex
prompt_dev/: __init__.py  cli.py  io.py  llm_client.py  orchestrator.py  prompts.py  schemas.py  server_manager.py  uncertainty.py
prompt_dev/conf/: config.yaml
prompt_dev/helpers/: compile_run_markdown.py
prompt_dev/steps/: __init__.py  _step_common.py  step_01_initial_elicitation.py  step_02_self_refine_overview.py  step_03_subcomponent_decomposition.py  step_04_recursive_component_definition.py  step_05_self_refine_component_definitions.py  step_06_expert_revision.py  step_07_question_generation.py  step_08_uncertainty_estimation.py  step_09_expert_revision_high_uncertainty.py  step_10_expert_annotation.py  step_11_grounded_inference.py  step_12_alignment_assessment.py
scripts/: apply_env_patches.py  auxiliary_servers.sub  backfill_privacylens_wandb.py  clean_multirun.py  clean_scratch_models.py  clean_wandb.py  completion_inspector.py  concatenate_nov10_verify_nbl.py  convert_mllama_weights_to_hf.py  embed_norms_and_flows.py  embed_norms_and_flows.sub  embedding_server.sub  export_uair_brief_markdown.py  fetch_novel_summaries.py  find_eval_runs.py  judge_server.sub  launch_auxiliary_servers.sh  merge_lora.py  merge_lora_safetensors.py  recluster_norms_qwen3emb.py  run_qwen25_72b_llm.sub  run_sft_fiction10.sh  sanity_check_eval.py  sanity_check_lora.py  serve_sft_checkpoint.sub  test_sft_data_prep.py  test_wandb_metadata.py
viz/longitudinal_world/: README.md  index.html  main.js  prepare_cross_country_mentions.py  prepare_geo_data.py
wiki/: README.md  architecture.md  dagspaces.md  grpo-reward.md  models.md  normative-simulacra.md  overview.md  slurm-and-env.md  thinking-modes.md
wiki/benchmarks/: README.md  confaide.md  contextreasoner.md  privacylens.md
wiki/howto/: add-dagspace.md  add-eval-benchmark.md  add-model.md  add-stage.md  run-experiments.md
(+490 files in other folders)
