[project]
name = "trawler"
version = "0.1.0"
description = "A configurable pipeline framework for large-scale text dataset processing with LLM integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matt Franchi"}
]
keywords = ["nlp", "llm", "pipeline", "text-processing", "vllm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiohttp-cors",
    "aiosignal",
    "annotated-types",
    "antlr4-python3-runtime",
    "anyio",
    "astor",
    "asttokens",
    "attrs",
    "babel",
    "blake3",
    "boto3",
    "botocore",
    "cachetools",
    "cbor2",
    "certifi",
    "cffi",
    "charset-normalizer",
    "choreographer",
    "click",
    "cloudpickle",
    "colorful",
    "comm",
    "compressed-tensors",
    "contourpy",
    "courlan",
    "cuda-bindings",
    "cuda-pathfinder",
    "cuda-python",
    "cudf-cu12>=24.10.0",
    "cuml-cu12>=24.10.0",
    "cupy-cuda12x",
    "cuvs-cu12>=24.10.0",
    "cycler",
    "dask",
    "dask-cuda>=24.10.0",
    "dask-cudf-cu12>=24.10.0",
    "dateparser",
    "debugpy",
    "decorator",
    "depyf",
    "dill",
    "diskcache",
    "distlib",
    "distributed",
    "distributed-ucxx-cu12",
    "distro",
    "dnspython",
    "einops",
    "email-validator",
    "executing",
    "fastapi",
    "fastapi-cli",
    "fastapi-cloud-cli",
    "fastjsonschema",
    "fastrlock",
    "filelock",
    "flashinfer-python",
    "fonttools",
    "frozendict",
    "frozenlist",
    "fsspec",
    "geopandas",
    "gguf",
    "gitdb",
    "gitpython",
    "google-api-core",
    "google-auth",
    "googleapis-common-protos",
    "grpcio",
    "h11",
    "hdbscan",
    "hf-transfer",
    "hf-xet",
    "htmldate",
    "httpcore",
    "httptools",
    "httpx",
    "huggingface-hub>=0.34.0",
    "hydra-core",
    "hydra-submitit-launcher",
    "idna",
    "importlib-metadata",
    "iniconfig",
    "interegular",
    "ipykernel",
    "ipython",
    "ipython-pygments-lexers",
    "ipywidgets",
    "jedi",
    "jinja2",
    "jiter",
    "jmespath",
    "joblib",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter-client",
    "jupyter-core",
    "jupyterlab-widgets",
    "justext",
    "kaleido",
    "kiwisolver",
    "lark",
    "libcudf-cu12>=24.10.0",
    "libcuml-cu12>=24.10.0",
    "libcuvs-cu12>=24.10.0",
    "libkvikio-cu12",
    "libraft-cu12>=24.10.0",
    "librmm-cu12>=24.10.0",
    "llguidance",
    "llvmlite",
    "lm-format-enforcer",
    "locket",
    "logistro",
    "lxml",
    "lxml-html-clean",
    "markdown-it-py",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mdurl",
    "mistral-common",
    "mpmath",
    "msgpack",
    "msgspec",
    "multidict",
    "narwhals",
    "nbformat",
    "nest-asyncio",
    "networkx",
    "ninja",
    "nltk",
    "numba",
    "numba-cuda",
    "numpy",
    "nvidia-ml-py",
    "nvtx",
    "omegaconf",
    "openai",
    "openai-harmony",
    "opencensus",
    "opencensus-context",
    "opencv-python-headless",
    "opentelemetry-api",
    "opentelemetry-exporter-prometheus",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "orjson",
    "outlines-core",
    "packaging",
    "pandarallel",
    "pandas",
    "parso",
    "partd",
    "partial-json-parser",
    "pexpect",
    "pillow",
    "platformdirs",
    "plotly",
    "pluggy",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "prompt-toolkit",
    "propcache",
    "proto-plus",
    "protobuf",
    "psutil",
    "ptyprocess",
    "pure-eval",
    "py-cpuinfo",
    "py-spy",
    "pyarrow",
    "pyasn1",
    "pyasn1-modules",
    "pybase64",
    "pycountry",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydantic-extra-types",
    "pygments",
    "pylibcudf-cu12>=24.10.0",
    "pylibraft-cu12>=24.10.0",
    "pynndescent",
    "pynvjitlink-cu12",
    "pynvml",
    "pyogrio",
    "pypandoc",
    "pyparsing",
    "pyproj",
    "pytest",
    "pytest-timeout",
    "python-dateutil",
    "python-dotenv",
    "python-json-logger",
    "python-multipart",
    "pytz",
    "pyyaml",
    "pyzmq",
    "raft-dask-cu12>=24.10.0",
    "rapids-dask-dependency>=24.10.0",
    "rapids-logger",
    "referencing",
    "regex",
    "requests",
    "rich",
    "rich-toolkit",
    "rignore",
    "rmm-cu12>=24.10.0",
    "rpds-py",
    "rsa",
    "s3transfer",
    "safetensors",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentence-transformers",
    "sentencepiece",
    "sentry-sdk",
    "setproctitle",
    "setuptools",
    "shapely",
    "shellingham",
    "simplejson",
    "six",
    "smart-open",
    "smmap",
    "sniffio",
    "sortedcontainers",
    "soundfile",
    "soxr",
    "stack-data",
    "starlette",
    "submitit",
    "sympy",
    "tabulate",
    "tblib",
    "termcolor",
    "threadpoolctl",
    "tiktoken",
    "tld",
    "tokenizers",
    "toolz",
    "torch",
    "torchaudio",
    "torchvision",
    "tornado",
    "tqdm",
    "trafilatura",
    "traitlets",
    "transformers>=4.56.0",
    "treelite",
    "triton",
    "typer",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "tzlocal",
    "umap-learn",
    "urllib3",
    "uvicorn",
    "virtualenv",
    "vllm>=0.17.0",
    "wandb",
    "watchfiles",
    "wcwidth",
    "websockets",
    "widgetsnbextension",
    "wordcloud",
    "wrapt",
    "xformers",
    "xgrammar",
    "yarl",
    "zict",
    "zipp",
    "accelerate>=1.0.0",
    "datasets>=4.5.0",
    "trl>=0.29.0",
    "peft>=0.18.1",
    "rapidfuzz>=3.14.3",
    "flash-attn",
    "causal-conv1d",
    "flash-linear-attention",
]

[tool.setuptools.packages.find]
include = ["dagspaces*"]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://pypi.nvidia.com"]
